Modify test to support jwt.