@@ -10,12 +10,15 @@ import com.alejogalizzi.notes.model.dto.CategoryDTO;
 import com.alejogalizzi.notes.model.dto.NoteDTO;
 import com.alejogalizzi.notes.model.entity.Category;
 import com.alejogalizzi.notes.model.entity.Note;
+import com.alejogalizzi.notes.model.entity.User;
 import com.alejogalizzi.notes.repository.CategoryRepository;
+import com.alejogalizzi.notes.repository.IUserRepository;
 import com.alejogalizzi.notes.repository.NoteRepository;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -37,38 +40,36 @@ public class PostNoteIntegrationTest extends AbstractBaseNoteIntegrationTest {
   @MockBean
   private CategoryRepository categoryRepository;
 
+  @MockBean
+  private IUserRepository userRepository;
+
+  private User user;
   private Note note1;
-  private Note note2;
-  private Note note3;
-  private Note note4;
 
   private Category category1;
-  private Category category2;
-  private Category category3;
 
   @Before
   public void setUp() {
+    createTokenHeader();
+    user = new User(1L, USERNAME, PASSWORD);
     category1 = new Category(1L, CATEGORY_NAME_1, Date.from(
         Instant.now()));
-    category2 = new Category(1L, CATEGORY_NAME_2, Date.from(
+    Category category2 = new Category(1L, CATEGORY_NAME_2, Date.from(
         Instant.now()));
-    category3 = new Category(1L, CATEGORY_NAME_3, Date.from(
+    Category category3 = new Category(1L, CATEGORY_NAME_3, Date.from(
         Instant.now()));
     note1 = new Note(1L, NOTE_NAME_1, CONTENT_1, false,
         Collections.singletonList(category1), Date.from(Instant.now()), Date.from(Instant.now()));
-    note2 = new Note(1L, NOTE_NAME_2, CONTENT_2, false,
-        Collections.singletonList(category1), Date.from(Instant.now()), Date.from(Instant.now()));
-    note3 = new Note(1L, NOTE_NAME_3, CONTENT_1, true,
-        Collections.singletonList(category3), Date.from(Instant.now()), Date.from(Instant.now()));
-    note4 = new Note(1L, NOTE_NAME_4, CONTENT_2, false,
-        Arrays.asList(category2, category3), Date.from(Instant.now()), Date.from(Instant.now()));
   }
 
   @Test
   public void shouldCreateNote() {
     when(noteRepository.save(any(Note.class))).thenReturn(note1);
+    when(userRepository.findByUsername(USERNAME)).thenReturn(user);
 
-    HttpEntity<NoteDTO> request = new HttpEntity<>(createRequest(NOTE_NAME_1,CONTENT_1, Arrays.asList(new CategoryDTO(CATEGORY_NAME_1))), headers);
+    HttpEntity<NoteDTO> request = new HttpEntity<>(
+        createRequest(NOTE_NAME_1, CONTENT_1, Arrays.asList(new CategoryDTO(CATEGORY_NAME_1))),
+        headers);
 
     ResponseEntity<Void> response = restTemplate.exchange(createURLWithPort(NOTE_PATH),
         HttpMethod.POST, request, Void.class);
@@ -79,8 +80,9 @@ public class PostNoteIntegrationTest extends AbstractBaseNoteIntegrationTest {
   @Test
   public void shouldNotCreateNoteWhenPassingNoteWithNullName() {
     when(noteRepository.save(any(Note.class))).thenReturn(note1);
-
-    HttpEntity<NoteDTO> request = new HttpEntity<>(createRequest(null,CONTENT_1, Arrays.asList(new CategoryDTO(CATEGORY_NAME_1))), headers);
+    when(userRepository.findByUsername(USERNAME)).thenReturn(user);
+    HttpEntity<NoteDTO> request = new HttpEntity<>(
+        createRequest(null, CONTENT_1, List.of(new CategoryDTO(CATEGORY_NAME_1))), headers);
 
     ResponseEntity<ErrorResponse> response = restTemplate.exchange(createURLWithPort(NOTE_PATH),
         HttpMethod.POST, request, ErrorResponse.class);
@@ -93,8 +95,9 @@ public class PostNoteIntegrationTest extends AbstractBaseNoteIntegrationTest {
   @Test
   public void shouldNotCreateNoteWhenPassingNoteWithNullNameAndNullContent() {
     when(noteRepository.save(any(Note.class))).thenReturn(note1);
-
-    HttpEntity<NoteDTO> request = new HttpEntity<>(createRequest(null,null, Arrays.asList(new CategoryDTO(CATEGORY_NAME_1))), headers);
+    when(userRepository.findByUsername(USERNAME)).thenReturn(user);
+    HttpEntity<NoteDTO> request = new HttpEntity<>(
+        createRequest(null, null, List.of(new CategoryDTO(CATEGORY_NAME_1))), headers);
 
     ResponseEntity<ErrorResponse> response = restTemplate.exchange(createURLWithPort(NOTE_PATH),
         HttpMethod.POST, request, ErrorResponse.class);
@@ -107,7 +110,7 @@ public class PostNoteIntegrationTest extends AbstractBaseNoteIntegrationTest {
   @Test
   public void shouldCreateCategory() {
     when(categoryRepository.save(any(Category.class))).thenReturn(category1);
-
+    when(userRepository.findByUsername(USERNAME)).thenReturn(user);
     HttpEntity<CategoryDTO> request = new HttpEntity<>(new CategoryDTO(CATEGORY_NAME_1), headers);
 
     ResponseEntity<Void> response = restTemplate.exchange(createURLWithPort(CATEGORY_ADD),
@@ -119,7 +122,7 @@ public class PostNoteIntegrationTest extends AbstractBaseNoteIntegrationTest {
   @Test
   public void shouldNotCreateCategoryWhenSendEmptyName() {
     when(categoryRepository.save(any(Category.class))).thenReturn(category1);
-
+    when(userRepository.findByUsername(USERNAME)).thenReturn(user);
     HttpEntity<CategoryDTO> request = new HttpEntity<>(new CategoryDTO(null), headers);
 
     ResponseEntity<ErrorResponse> response = restTemplate.exchange(createURLWithPort(CATEGORY_ADD),
